2004-09-01  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Prepend don't overwrite CFLAGS and LDFLAGS given
	in environment.

2004-08-31  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/x11/XGServerEvent.m: Changed mapping of GNUstep modifier
	keys to X11 KeySyms instead of KeyCodes.  (Added check_key(); updated
	check_modifier(), -processEvent: (KeyMapNotify), changed
	default_key_code() to key_sym_from_defaults(), updated
	initialize_keyboard().)
	
2004-08-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m: Changed usage of CString for font
	name and family into UTF8String for XFT. Patch by Yen-Ju Chen
	<yjchenx@hotmail.com>.
	
2004-08-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-windowbounds:): Corrected variable
	name, so the fiel compiles again.
	(-setupRunLoopInputSourcesForMode:): Added new event polling code
	for Cygwin.
	* Source/cairo/CairoContext.m (-NSReadPixel:, beep): Removed methods.
	
2004-08-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-DPScurrentalpha:,
	-DPSsetoffset::): Removed methods.
	* Source/cairo/CairoGState.m (-offset, -setoffset:): Added methods.
	(-forwardInvocation:): Improved output.
	(-GSSetDevice:::) Commented out NSLog calls.
	* Source/gsc/GSGState.m (-_showString:lenght:): Removed this
	method which was a left over from last patch. 
	
2004-08-09 14:38  Alexander Malmberg <alexander@malmberg.org>

	* Source/win32/WIN32Server.m, Source/win32/WIN32ServerEvent.m,
	Headers/win32/WIN32Geometry.h (MSScreenRectToGS, GSScreenRectToMS):
	The 'GS' rect is, in the terminology of NSWindow.h, the window frame,
	not the screen frame. make the conversions match this and update
	the callers.
	* Source/x11/XGServerWindow.m (-_OSFrameToXFrame:for:,
	-_OSFrameToXHints:for:, -_XFrameToOSFrame:for:): Update conversions.
	(-windowdevice:): Remove artificial delays and geometry querying.
	Update based on the frame from the last ConfigureNotify.